vlib/v/checker/tests/array_decl_type_err.vv
type Arr = array
type ArraySumType = array | int

interface Foo {
	arr array
}

struct Config {
mut:
	max_size          string
	filter_until_hour int   = 240 // 10 days
	prune_list        array = ['all']
	time_interval     int   = 300 // 5 min
}

mut a := []array{}
a.insert(4, '1')
